force-app/main/default/objects/Botox_Dysport__c/Botox_Dysport__c.object-meta.xml
<CustomObject>
    <label>Botox/Dysport</label>
    <nameField>
        <label>Botox/Dysport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Botox/Dysport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>