force-app/main/default/objects/Botox_Dysport__c/fields/Botox_Dysport_Procedure_Lot__c.field-meta.xml
<CustomField>
    <fullName>Botox_Dysport_Procedure_Lot__c</fullName>
    <label>Botox/Dysport Procedure Lot#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>