force-app/main/default/objects/Botox_Dysport__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Botox/Dysport</relationshipLabel>
    <relationshipName>Botox_Dysport</relationshipName>
    <type>Lookup</type>
</CustomField>