force-app/main/default/objects/Botox_Dysport__c/fields/Injectable_Notes_Botox_Dysport__c.field-meta.xml
<CustomField>
    <fullName>Injectable_Notes_Botox_Dysport__c</fullName>
    <label>Injectable Notes Botox/Dysport</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>